--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
@@ -46,6 +46,15 @@
                         <div id="divZZLX" class="div_select_dropdown"></div>
                         </div>
                     </li>
+		    <li class="li_condition_body" style="margin-right:10px;">
+                        <div id="divFWLDText" class="div_select_out">
+                        <div id="divFWLDSpan" class="div_select_in">
+                        <span id="spanFWLD" column="FWLD" class="span_select spaninput_fontcolor">亮点不限</span>
+                        <div class="span_select_arrow"></div>
+                        </div>
+                        <div id="divFWLD" class="div_select_dropdown"></div>
+                        </div>
+                    </li>
 	        </ul>
 	    </div>
         <div id="div_condition_body_SF" class="div_condition_body" style="display: none;">
