--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -25,22 +25,22 @@
         <div class="div_body_top">
             <div class="div_body_top_inner">
                 <ul class="ul_body_top">
-                    <li class="li_body_top" onclick="ToEJSY('FCSY')">
-                        <div class="p_body_top_left">
+                    <li class="li_body_top">
+                        <div class="p_body_top_left" onclick="ToEJSY('FCSY')">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_fc.png")" />
                         </div>
-                        <div class="p_body_top_left p_body_top_left_dl">房产</div>
+                        <div class="p_body_top_left p_body_top_left_dl" onclick="ToEJSY('FCSY')">房产</div>
             		<ul class="ul_body_top_inner">
             			<li class="li_body_top_small" style="margin-right:0px;" onclick="OpenCXLB(13,'/FCCX/FCCX_ZZF','null')">租房</li>
 				<li class="li_body_top_fg">/</li>
             			<li class="li_body_top_small" style="margin-right:0px;" onclick="OpenCXLB(16,'/FCCX/FCCX_ESF','null')">二手房</li>
             		</ul>
                     </li>
-                    <li class="li_body_top" onclick="ToEJSY('CLSY')">
-                        <div class="p_body_top_left">
+                    <li class="li_body_top">
+                        <div class="p_body_top_left" onclick="ToEJSY('CLSY')">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_cl.png")" />
                         </div>
-                        <div class="p_body_top_left p_body_top_left_dl">车辆</div>
+                        <div class="p_body_top_left p_body_top_left_dl" onclick="ToEJSY('CLSY')">车辆</div>
             		<ul class="ul_body_top_inner">
             			<li class="li_body_top_small" style="margin-right:0px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','null')">轿车</li>
 				<li class="li_body_top_fg">/</li>
@@ -49,22 +49,22 @@
             			<li class="li_body_top_small" style="margin-right:0px;" onclick="OpenCXLB(190,'/CLCX/CLCX_HC','null')">货车</li>
             		</ul>
                     </li>
-                    <li class="li_body_top" onclick="ToEJSY('ZPSY')">
-                        <div class="p_body_top_left">
+                    <li class="li_body_top">
+                        <div class="p_body_top_left" onclick="ToEJSY('ZPSY')">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_zp.png")" />
                         </div>
-                        <div class="p_body_top_left p_body_top_left_dl">招聘</div>
+                        <div class="p_body_top_left p_body_top_left_dl" onclick="ToEJSY('ZPSY')">招聘</div>
             		<ul class="ul_body_top_inner">
             			<li class="li_body_top_small" style="margin-right:0px;" onclick="OpenCXLB(89,'/QZZPCX/QZZPCX_QZZP','null')">全职</li>
 				<li class="li_body_top_fg">/</li>
             			<li class="li_body_top_small" style="margin-right:0px;" onclick="OpenCXLB(90,'/QZZPCX/QZZPCX_JZZP','null')">兼职</li>
             		</ul>
                     </li>
-                    <li class="li_body_top" onclick="ToEJSY('SHFWSY')">
-                        <p class="p_body_top_left">
+                    <li class="li_body_top">
+                        <p class="p_body_top_left" onclick="ToEJSY('SHFWSY')">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_shfw.png")" />
                         </p>
-                        <p class="p_body_top_left p_body_top_left_dl">生活服务</p>
+                        <p class="p_body_top_left p_body_top_left_dl" onclick="ToEJSY('SHFWSY')">生活服务</p>
 			<ul class="ul_body_top_inner">
             			<li class="li_body_top_small" style="margin-right:0px;" onclick="OpenCXLB(172,'/SHFWCX/SHFWCX_BJ','null')">搬家</li>
 				<li class="li_body_top_fg">/</li>
@@ -73,11 +73,11 @@
             			<li class="li_body_top_small" style="margin-right:0px;" onclick="OpenCXLB(174,'/SHFWCX/SHFWCX_BJQX','null')">保洁</li>
             		</ul>
                     </li>
-                    <li class="li_body_top" onclick="ToEJSY('SWFWSY')">
-                        <p class="p_body_top_left">
+                    <li class="li_body_top">
+                        <p class="p_body_top_left" onclick="ToEJSY('SWFWSY')">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_swfw.png")" />
                         </p>
-                        <p class="p_body_top_left p_body_top_left_dl">商务服务</p>
+                        <p class="p_body_top_left p_body_top_left_dl" onclick="ToEJSY('SWFWSY')">商务服务</p>
 			<ul class="ul_body_top_inner">
             			<li class="li_body_top_small" style="margin-right:0px;" onclick="OpenCXLB(211,'/SWFWCX/SWFWCX_GSZC','null')">工商</li>
 				<li class="li_body_top_fg">/</li>
@@ -86,11 +86,11 @@
             			<li class="li_body_top_small" style="margin-right:0px;" onclick="OpenCXLB(219,'/SWFWCX/SWFWCX_SJCH','null')">营销</li>
             		</ul>
                     </li>
-                    <li class="li_body_top" onclick="ToEJSY('CWSY')">
-                        <p class="p_body_top_left">
+                    <li class="li_body_top">
+                        <p class="p_body_top_left" onclick="ToEJSY('CWSY')">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_cw.png")" />
                         </p>
-                        <p class="p_body_top_left p_body_top_left_dl">宠物</p>
+                        <p class="p_body_top_left p_body_top_left_dl" onclick="ToEJSY('CWSY')">宠物</p>
 			<ul class="ul_body_top_inner">
             			<li class="li_body_top_small" style="margin-right:0px;" onclick="OpenCXLB(31,'/CWCX/CWCX_CWG','null')">狗</li>
 				<li class="li_body_top_fg">/</li>
@@ -99,11 +99,11 @@
             			<li class="li_body_top_small" style="margin-right:0px;" onclick="OpenCXLB(33,'/CWCX/CWCX_HNYC','LB=120')">小宠</li>
             		</ul>
                     </li>
-                    <li class="li_body_top" onclick="ToEJSY('ESSY')">
-                        <p class="p_body_top_left">
+                    <li class="li_body_top">
+                        <p class="p_body_top_left" onclick="ToEJSY('ESSY')">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_es.png")" />
                         </p>
-                        <p class="p_body_top_left p_body_top_left_dl">二手市场</p>
+                        <p class="p_body_top_left p_body_top_left_dl" onclick="ToEJSY('ESSY')">二手市场</p>
 			<ul class="ul_body_top_inner">
             			<li class="li_body_top_small" style="margin-right:0px;" onclick="OpenCXLB(154,'/ESCX/ESCX_SJSM_ESSJ','null')">手机</li>
 				<li class="li_body_top_fg">/</li>
@@ -112,11 +112,11 @@
             			<li class="li_body_top_small" style="margin-right:0px;" onclick="OpenCXLB(159,'/ESCX/ESCX_JDJJBG_ESJD','null')">家电</li>
             		</ul>
                     </li>
-                    <li class="li_body_top" onclick="ToEJSY('JYPXSY')">
-                        <p class="p_body_top_left">
+                    <li class="li_body_top">
+                        <p class="p_body_top_left" onclick="ToEJSY('JYPXSY')">
                             <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_jypx.png")" />
                         </p>
-                        <p class="p_body_top_left p_body_top_left_dl">教育培训</p>
+                        <p class="p_body_top_left p_body_top_left_dl" onclick="ToEJSY('JYPXSY')">教育培训</p>
 			<ul class="ul_body_top_inner">
             			<li class="li_body_top_small" style="margin-right:0px;" onclick="OpenCXLB(106,'/JYPXCX/JYPXCX_JJJG','null')">家教</li>
 				<li class="li_body_top_fg">/</li>
@@ -162,7 +162,7 @@
 			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(13,'/FCCX/FCCX_ZZF','null')">整租</li>
 			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(14,'/FCCX/FCCX_HZF','null')">合租</li>
 			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(15,'/FCCX/FCCX_DZF','null')">短租</li>
-			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(13,'/FCCX/FCCX_ZZF','null')">公寓</li>
+			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(13,'/FCCX/FCCX_ZZF','ZZLX=公寓')">公寓</li>
 		</ul>
 		<ul class="ul_body_middle_left_section" style="height: 30px;">		
 			<li class="li_body_middle_left_section purple" style="margin-right:20px;" onclick="OpenCXLB(16,'/FCCX/FCCX_ESF','null')">二手房</li>
