--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_DZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_DZF.cshtml
@@ -8,6 +8,7 @@
 @section Section_Body {
     <div id="divCondition" class="div_condition">
         <div id="div_condition_body_QY" class="div_condition_body" style="padding-top: 20px;"></div>
+        <div id="div_condition_body_DD" class="div_condition_body"></div>
         <div id="div_condition_body_FWLX" class="div_condition_body"></div>
         <div id="div_condition_body_ZJ" class="div_condition_body"></div>
         <div id="div_condition_body_SF" class="div_condition_body" style="display: none;">
