--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/XXXX_Common.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/XXXX_Common.css
@@ -78,6 +78,9 @@
 .div_body_left_body_xq_zk_bcms .i_body_left_body_xq_zk_bcms{width: 12px;height: 12px;display: inline-block;background-image: url(../images/head_nav_down.png);margin-left: 5px;}
 
 
+.div_body_left_body_right_lxdh{background-color:#bc6ba6;width:320px;height:75px;text-align:center;margin-left:20px;margin-top:45px;}
+.img_body_left_body_right_lxdh{width:41.472px;height:33px;margin-right:15px;margin-bottom:15px;}
+.span_body_left_body_right_lxdh{color:#ffffff;font-size:28px;margin-top:15px;display:inline-block;}
 .div_body .div_body_left .div_body_left_body_right .p_body_left_body_right .span_body_left_body_right_right_lxdh {font-size: 28px;color: #bc6ba6;}
 .div_body .div_body_left .div_body_left_body_right .p_body_left_body_right .span_body_left_body_right_right_ckwzdh {font-size: 20px;color: #bc6ba6;border-radius: 4px;border:2px solid #bc6ba6;width: 120px;height: 40px;display: inline-block;padding: 3px 18px;cursor: pointer;margin-left: 10px;}
 .div_body .div_body_left .div_body_left_body_right .p_body_left_body_right .span_body_left_body_right_right_ckwzdh:hover{ background: #bc6ba6;color: #ffffff;}
