--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/XXXX_Common.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/XXXX_Common.css
@@ -40,7 +40,7 @@
 .div_body .div_body_left .ul_body_left_body_cnxh .li_body_left_body_cnxh .p_li_body_left_body_cnxh_cs{ width: 100%;height: 20px;overflow: hidden;display: block;color: #999999;margin-bottom: 2px;font-size: 14px;}
 .div_body .div_body_left .ul_body_left_body_cnxh .li_body_left_body_cnxh .p_li_body_left_body_cnxh_jg{width: 100%;height: 20px;overflow: hidden;display: block;color: #bc6ba6;font-size: 14px;font-weight: 700;margin-bottom: 2px;}
 /*首页_主体_左部_精品推荐*/
-.div_body .div_body_left .div_body_left_body_jptj{ height: auto;float: left;margin-top: 20px;}
+.div_body .div_body_left .div_body_left_body_jptj{ height: auto;float: left;margin-top: 20px;width:100%;}
 .div_body .div_body_left .div_body_left_body_jptj .p_body_left_body_jptj{ font-size: 18px;font-weight: 700;height: 60px;border-bottom: 1px solid #cccccc;}
 .div_body .div_body_left .ul_body_left_body_jptj{ padding: 0;}
 .div_body .div_body_left .ul_body_left_body_jptj .li_body_left_body_jptj{width: 180px;height: 210px;border: 1px solid #e6e6e6;padding: 8px;float: left;margin-left: 18px;margin-bottom: 10px;}
@@ -78,7 +78,7 @@
 .div_body_left_body_xq_zk_bcms .i_body_left_body_xq_zk_bcms{width: 12px;height: 12px;display: inline-block;background-image: url(../images/head_nav_down.png);margin-left: 5px;}
 
 
-.div_body_left_body_right_lxdh{background-color:#bc6ba6;width:320px;height:75px;text-align:center;margin-left:20px;margin-top:45px;}
+.div_body_left_body_right_lxdh{background-color:#bc6ba6;width:320px;height:75px;cursor:pointer;text-align:center;margin-left:20px;margin-top:45px;}
 .img_body_left_body_right_lxdh{width:41.472px;height:33px;margin-right:15px;margin-bottom:15px;}
 .span_body_left_body_right_lxdh{color:#ffffff;font-size:28px;margin-top:15px;display:inline-block;}
 .div_body .div_body_left .div_body_left_body_right .p_body_left_body_right .span_body_left_body_right_right_lxdh {font-size: 28px;color: #bc6ba6;}
@@ -107,12 +107,13 @@
 .div_show_right{z-index: 1101;position: fixed;width:20%;height:100%;top:0;right:0;text-align:right;cursor:pointer;}
 .div_show_right .img_show_right{background-image: url(../images/XXXX/GY/xxxx_gy_right.png);width:30px;height:52px;margin-right:40px;top:48%;right:0;position:fixed;}
 .div_show_middle{position: fixed;width:60%;height:100%;left:20%;text-align:center;}
-.div_show_middle_bottom{height:100px;text-align:center;width:900px;overflow:hidden;display:inline-block;}
+.div_show_middle_bottom{height:100px;text-align:center;width:100%;overflow:hidden;display:inline-block;}
 
 
 .ul_show_list{width: 2000px;height: 76px;padding: 0;margin-top: 20px;display:inline-block;}
-.li_show_tp{float: left;height: 100px;margin-right: 10px;width: 130px;position: relative;}
+.li_show_tp{float: left;height: 100px;margin-right: 10px;width: 18%;position: relative;}
 .li_show_tp:hover{ cursor: pointer;}
 .img_show_tp{ width: 130px;height: 100px;}
 .div_show_tp{ position: absolute;width: 130px;height: 100px;top: 0;left: 0;background-color: rgba(0, 0, 0, 0.5); }
 .div_show_tp:hover{background-color: rgba(0, 0, 0, 0);}
+.ul_body_left_body_left_list{padding-top:20px;}
