--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_JC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_JC.cshtml
@@ -62,7 +62,7 @@
             <div class="div_row_left" style="margin-left: 145px;">
                 <span class="spanFWCZ">&nbsp;</span>
             </div>
-            <div class="div_row_right" id="div_clys_right2">
+            <div class="div_row_right" id="div_clys_right2" style="margin-left:21px;">
             </div>
             <div id="divCLYSTip" class="Warn" style="z-index: 992;"></div>
         </div>
