--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_JC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_JC.cshtml
@@ -7,6 +7,9 @@
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/CL/CL_JCYZ.js")"></script>
 }
 @section Section_Body {
+    <input type="hidden" id="PP" />
+    <input type="hidden" id="CX" />
+    <input type="hidden" id="KS" />
     <div id="myTabContent" class="div_content">
         <div id="divJBXX" class="div_split" style="display: block; text-align: left">
             <span class="span_split">基本信息</span>
@@ -145,7 +148,7 @@
             <div id="divSZQYTip" class="Warn" style="z-index: 981;"></div>
         </div>
         <div id="divSFDQBY" class="div_row" style="z-index: 981;">
-            <div class="div_row_left" style="margin-left: 9px;">
+            <div class="div_row_left" style="margin-left: 15px;">
                 <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ">是否定期4S保养</span>
             </div>
