--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CLCX/CLCX_JC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CLCX/CLCX_JC.cshtml
@@ -5,13 +5,17 @@
     <link href="@Url.Content("~/Areas/Business/Css/CXLB/CLCX.css")" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/CXLB/CLCX/CLCX_JC.js")"></script>
     <style type="text/css">
-	#divLC .ul_select{width:95px;}
+	#divLC .ul_select{width:105px;}
 	#divBSX .ul_select{width:95px;}
     </style>
 }
 @section Section_Body {
     <div id="divCondition" class="div_condition">
         <div id="div_condition_body_PP" class="div_condition_body" style="padding-top: 20px;"></div>
+        <div class="div_row_right_jcpp">
+             <div id="div_row_right_jcpp_first" class="div_row_right_jcpp_item div_row_right_jcpp_first">
+             </div>
+        </div>
         <div id="div_condition_body_CX" class="div_condition_body"></div>
         <div id="div_condition_body_JG" class="div_condition_body"></div>
 	<div id="div_condition_body_QT" class="div_condition_body">
@@ -36,12 +40,12 @@
                         </div>
                     </li>
 		    <li class="li_condition_body" style="margin-right:10px;">
-                        <div id="divLCText" class="div_select_out" style="width:95px;">
-                        <div id="divLCSpan" class="div_select_in" style="width:95px;">
-                        <span id="spanLC" column="LC" class="span_select spaninput_fontcolor" style="width:75px;">里程不限</span>
+                        <div id="divLCText" class="div_select_out" style="width:105px;">
+                        <div id="divLCSpan" class="div_select_in" style="width:105px;">
+                        <span id="spanLC" column="LC" class="span_select spaninput_fontcolor" style="width:85px;">里程不限</span>
                         <div class="span_select_arrow"></div>
                         </div>
-                        <div id="divLC" class="div_select_dropdown" style="width:75px;"></div>
+                        <div id="divLC" class="div_select_dropdown" style="width:85px;"></div>
                         </div>
                     </li>
 		    <li class="li_condition_body" style="margin-right:10px;">
