--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/CXLB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/CXLB.cshtml
@@ -12,7 +12,6 @@
     <link href="@Url.Content("~/Areas/Business/Css/Common/XZQ.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Areas/Business/Css/Common/Head.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Areas/Business/Css/Common/CXLB_Common.css" )" rel="stylesheet" />
-    <link href="@Url.Content("~/Areas/Business/Css/CXLB/CXCommon.css" )" rel="stylesheet" />
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/Common.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/Regular.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/PageJson.js")></script>
@@ -76,6 +75,10 @@
     <div class="div_bottom">
         <p class="p_div_bottom">©2018 福建沐晗信息技术有限公司</p>
         <p class="p_div_bottom reduce">闽ICP备18003746号</p>
+    </div>
+    <div class="div_shadow" id="div_shadow">
+    </div>
+    <div class="div_show" id="div_show">
     </div>
 }
 @RenderBody()
