--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/CLCX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/CLCX.css
@@ -78,7 +78,21 @@
 .div_select_dropdown {float: left; width: 75px;position: relative;z-index: 1001;top:0;}
 .span_select {display: inline-block;width: 55px;height: 20px;text-align: center;color:#999999;}
 .span_select_arrow {background-image: url(../images/arrow_down.png);width: 16px;height: 16px;display: inline-block;vertical-align: middle;margin-bottom:2px;}
-.span_select_arrow_blue {background-image: url(../images/arrow_down_blue.png);width: 16px;height: 16px;display: inline-block;vertical-align: middle;margin-bottom:2px;}
+.span_select_arrow_blue {width: 16px;height: 16px;display: inline-block;vertical-align: middle;margin-bottom:2px;}
 .ul_select {border-radius: 0px;margin-left: -1px;text-align: center;width: 75px;display: inline-block;border-left: 1px solid #cccccc;border-right: 1px solid #cccccc;border-bottom: 1px solid #cccccc;padding-left: 0px;height: 341px;}
 .li_select {height: 30px;text-align: left;display: block;line-height: 30px;padding-left:4px;font-size: 12px;cursor: pointer;color: #999999;background: #FFFFFF;width:100%;}
 .li_select:hover {background: #ececec;color: #333333;}
+
+
+.div_row_right_jcpp_item{display: none;z-index: 997;background-color: #ffffff;height: 100px;border: 1px solid #cccccc;margin-top: -10px;margin-bottom: 10px;border-radius: 0px;}
+.span_row_right_jcpp{cursor: pointer;float: right;width: 20px;height: 20px;display: inline-block;}
+.div_row_right_jcpp_first{width: 970px;margin-left: 90px;}
+.div_row_right_jcpp_first_left{ width: 930px;height:25px;display: inline-block;padding-left: 10px;float: left;margin-top:10px;}
+.ul_row_right_jcpp_first_left{ width: 100%;margin: 0;height: 100%;display: inline-block;padding: 0;}
+.li_row_right_jcpp_first_left{padding-top:3px;margin-right:5px;cursor: pointer;font-size: 14px;margin-bottom: 5px;display: inline-block;width: 25px;height: 25px;text-align: center;background-color: #bc6ba6;color: #ffffff;}
+.li_row_right_jcpp_first_left:hover{ background-color: #ad5b97;}
+.div_row_right_jcpp_first_right{ width: 930px;height: 65px;display: inline-block;padding-left: 10px;}
+.ul_row_right_jcpp_first_right{margin-top:10px;; width: 100%;margin-left: 0;height: 65px;display: none;padding: 0;}
+.li_row_right_jcpp_first_right_tag{padding-left: 5px;background-color: #ececec;width: 100%;height: 25px;display: block;}
+.li_row_right_jcpp_first_right_value{cursor: pointer;padding-left: 5px;width: auto;height: 25px;display: inline-block;margin-right:5px;}
+.li_row_right_jcpp_first_right_value:hover{ color: #bc6ba6; text-decoration:underline;}
