--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/HTFB_Common.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/HTFB_Common.css
@@ -27,8 +27,8 @@
 .div_row .font_QQ{ margin-left: 98px;}
 .div_row .font_two{ margin-left: 88px;}
 .div_row .font_three{ margin-left: 75px;}
-.div_row .font_five{ margin-left: 44px;}
-.div_row .font_six{ margin-left: 27px;}
+.div_row .font_five{ margin-left: 46px;}
+.div_row .font_six{ margin-left: 33px;}
 .div_row .font_seven{ margin-left: 11px;}
 .div_row .font_eight{ margin-left: -4px;}
 
@@ -38,9 +38,9 @@
 
 .img_radio {width: 18px;height: 18px;cursor: pointer;border: none !important;}
 
-.div_select_out {display: inline-block;width: 160px;height: 40px;border-radius: 4px;border: 1px solid #cccccc;position: relative;}
+.div_select_out {display: inline-block;width: 160px;height: 40px;border-radius: 0px;border: 1px solid #cccccc;position: relative;}
 
-.div_select_in {display: inline-block;width: 160px;height: 40px;border-radius: 4px;font-size: 14px;border: none;}
+.div_select_in {display: inline-block;width: 160px;height: 40px;border-radius: 0px;font-size: 14px;border: none;}
 
 .div_select_dropdown {float: left; width: 150px;position: relative;z-index: 1001;}
 
@@ -48,7 +48,7 @@
 
 .span_select_arrow {background-image: url(../images/arrow_down.png);width: 16px;height: 16px;display: inline-block;vertical-align: middle;}
 
-.ul_select {border-radius: 4px;margin-left: -1px;text-align: center;width: 160px;display: inline-block;border-left: 1px solid #cccccc;border-right: 1px solid #cccccc;border-bottom: 1px solid #cccccc;padding-left: 0px;height: 341px;}
+.ul_select {border-radius: 0px;margin-left: 0px;text-align: center;width: 160px;display: inline-block;border-left: 1px solid #cccccc;border-right: 1px solid #cccccc;border-bottom: 1px solid #cccccc;padding-left: 0px;height: 341px;}
 
 .li_select {height: 34px;text-align: left;display: block;padding-left: 6px;line-height: 34px;font-size: 14px;cursor: pointer;color: #999999;background: #FFFFFF;}
 
@@ -56,13 +56,13 @@
 
 .input_spaninput {width: 120px;margin-top: 1px;border: none;height: 30px;text-align: center;color: #333333 !important;}
 
-.span_spaninput {border: 1px solid #cccccc;display: inline-block;width: 160px;height: 40px;border-radius: 4px;font-size: 14px;}
+.span_spaninput {border: 1px solid #cccccc;display: inline-block;width: 160px;height: 40px;font-size: 14px;}
 
 .spaninput_fontcolor {color: #999999;}
 
 .span_required {color: #F2272D;display: inline-block;width: 20px;height: 36px;font-family: "宋体", "SimSun";}
 
-.input_input {width: 472px;padding: 6px 12px;border: 1px solid #cccccc;border-radius: 4px;font-size: 14px;height: 40px;}
+.input_input {width: 472px;padding: 6px 12px;border: 1px solid #cccccc;border-radius: 0px;font-size: 14px;height: 40px;}
 
 .Warn {font-size: 12px;color: #F2272D;margin-left: 175px;position: relative;display: block;}
 
@@ -91,7 +91,7 @@
 
 .span_mc:hover {color: #bc6ba6;font-weight: 700;}
 
-.input_content {width: 451px;cursor: default;border: 1px solid #ccc;border-radius: 4px;height: 34px;padding: 4px 12px;display: inline-block;}
+.input_content {width: 451px;cursor: default;border: 1px solid #ccc;border-radius: 0px;height: 34px;padding: 4px 12px;display: inline-block;}
 
 :-ms-input-placeholder.input_content {color: #999;}
 :-ms-input-placeholder.input_input {color: #999;}
