--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -199,14 +199,13 @@
 			<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=170')">起亚</li>
 			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=176')">荣威</li>
 			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=63')">长安</li>
-			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=69')">东南</li>
+			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=67')">东风</li>
 			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=181')">三菱</li>
 			<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=97')">华泰</li>
-			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=207')">夏利</li>
-			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=195')">天马</li>
-			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=215')">一汽</li>
-			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=94')">悍马</li>
-			<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=60')">长城</li>
+			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=60')">长城</li>
+			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=209')">雪铁龙</li>
+			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=210')">雪佛兰</li>
+			<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=155')">马自达</li>
 			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','null')">轿车</li>
 			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','null')">SUV</li>
 			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(187,'/CLCX/CLCX_MTC','null')">摩托车</li>
