--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -198,11 +198,11 @@
 			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=135')">雷诺</li>
 			<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=170')">起亚</li>
 			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=176')">荣威</li>
-			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=63')">长安</li>
+			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=208')">现代</li>
 			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=67')">东风</li>
 			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=181')">三菱</li>
 			<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=97')">华泰</li>
-			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=60')">长城</li>
+			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=42')">本田</li>
 			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=209')">雪铁龙</li>
 			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=210')">雪佛兰</li>
 			<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','PP=155')">马自达</li>
