--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -212,7 +212,7 @@
 			<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(186,'/CLCX/CLCX_DDC','null')">电动车</li>
 			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(191,'/CLCX/CLCX_GCC','null')">工程车</li>
 			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(190,'/CLCX/CLCX_HC','null')">货车</li>
-			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_JC','null')">面包车</li>
+			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(185,'/CLCX/CLCX_MBC','null')">面包车</li>
 			<li class="li_body_middle_left_section" style="margin-right:20px;" onclick="OpenCXLB(192,'/CLCX/CLCX_KC','null')">客车</li>
 		</ul>
 		<p class="p_body_middle_left_title_small">车辆服务</p>
@@ -256,7 +256,7 @@
 			<li class="li_body_middle_left_section_fg">/</li>
             		<li class="li_body_middle_left_section_cw" style="margin-right:0px;" onclick="OpenCXLB(32,'/CWCX/CWCX_CWM','PZ=1167')">加菲猫</li>
             	</ul>
-		<span class="span_body_middle_left_title_small_cw">小宠</span>
+		<span class="span_body_middle_left_title_small_cw" onclick="OpenCXLB(33,'/CWCX/CWCX_HNYC','null')">小宠</span>
             	<ul class="ul_body_middle_left_section_cw" style="height: 30px;">
             		<li class="li_body_middle_left_section_cw" style="margin-right:0px;" onclick="OpenCXLB(33,'/CWCX/CWCX_HNYC','LB=117')">鱼</li>
             		<li class="li_body_middle_left_section_fg_10">/</li>
