--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/HTFB_Common.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/HTFB_Common.css
@@ -107,7 +107,6 @@
 
 .SRK:focus {border: 1px solid #bc6ba6;color: #333333 !important;}
 
-
 .span_xzdz {color: #ad5b97;cursor: pointer;}
 .span_xzdz:hover {color: #bc6ba6;}
 
@@ -183,3 +182,5 @@
 .spanWJMM {cursor:pointer;float: right;}
 .spanWJMM:hover {color:#ad5b97;}
 .spanSplit {margin-left:5px;margin-right:5px;float:right;color:#666;}
+
+#JTDZ{float:right;margin-right:98px;}
