--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/QZZP/QZZPXX_JZZP.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/XXXX/QZZP/QZZPXX_JZZP.css
@@ -4,7 +4,7 @@
 .div_body .div_body_left{display: inline-block;width: 880px;border: 1px solid #cccccc;border-radius: 2px;height: auto;background-color: #ffffff;float: left;padding: 10px;}
 /*首页_主体_左部_标题*/
 .div_body .div_body_left .div_body_left_head{ height: 100px;width: 100%;border-bottom: 1px solid #cccccc;}
-.div_body .div_body_left .div_body_left_head .p_div_body_left_head_bt{ display: block;font-size: 25px;font-weight: 700;height: 45px;overflow:hidden;padding: 10px;}
+.div_body .div_body_left .div_body_left_head .p_div_body_left_head_bt{ display: block;font-size: 25px;font-weight: 700;height: 50px;overflow:hidden;padding: 10px;}
 .div_body .div_body_left .div_body_left_head .p_div_body_left_head_ll{ display: block;color: #999999;height: 30px;padding: 10px;font-size: 14px;}
 /*首页_主体_左部_信息主要内容*/
 .div_body .div_body_left .div_body_left_body{ width: 100%;height: 300px;margin-top: 20px;font-size: 16px;}
@@ -13,9 +13,8 @@
 .div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_zj{ color: #bc6ba6;font-size: 16px;}
 .div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_zjdw{ color: #bc6ba6;font-size: 16px;}
 .div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_yffs{ font-size: 16px;margin-left: 30px; }
-.div_body .div_body_left .div_body_left_body_right .p_body_left_body_right{ height: 45px;width: 100%;padding: 20px 30px;}
+.div_body .div_body_left .div_body_left_body_right .p_body_left_body_right{ height: 45px;width: 50%;float: left;padding: 20px 30px;}
 .div_body .div_body_left .div_body_left_body_right .p_body_left_body_right .span_body_left_body_right_left{ width: 80px;display: inline-block;text-align: right;vertical-align:top;}
-.div_body .div_body_left .div_body_left_body_right .p_body_left_body_right .span_body_left_body_right_right_lxdh {font-size: 28px;color: #bc6ba6;}
 /*首页_主体_左部_详情*/
 .div_body .div_body_left .div_body_left_body_xq{ height: auto;}
 .div_body .div_body_left .div_body_left_body_xq .p_body_left_body_xq{ font-size: 18px;font-weight: 700;height: 60px;border-bottom: 1px solid #cccccc;}
